[gd_scene load_steps=22 format=4 uid="uid://bcjq2c5lga4a8"]

[ext_resource type="Script" path="res://Levels/level_logic.gd" id="1_xnok4"]
[ext_resource type="Texture2D" uid="uid://xdnuo8ypn2n7" path="res://PlaceholderAssets/city_runner.png" id="2_1b7ux"]
[ext_resource type="Texture2D" uid="uid://dmbpxlh2insth" path="res://PlaceholderAssets/Goal.png" id="3_vmm24"]
[ext_resource type="PackedScene" uid="uid://ddccl1pdkg44s" path="res://Player/Player.tscn" id="4_yr0gb"]
[ext_resource type="PackedScene" uid="uid://c0h42i7i8qocu" path="res://KingEgg/king_egg.tscn" id="5_5cukh"]
[ext_resource type="Texture2D" uid="uid://cu56f5sonjin0" path="res://PlaceholderAssets/Tilemap32_placeholder.png" id="6_2d5xo"]
[ext_resource type="Script" path="res://Player/camera.gd" id="7_qfcct"]
[ext_resource type="PackedScene" uid="uid://bwss50lm4gv4d" path="res://MainScene/enemy.tscn" id="8_tkiwc"]
[ext_resource type="PackedScene" uid="uid://qte2uogiy6sk" path="res://DangerZone/danger_zone.tscn" id="9_mcrxt"]
[ext_resource type="AudioStream" uid="uid://dt6w5cm23lch8" path="res://PlaceholderAssets/shock.wav" id="10_xb1oo"]
[ext_resource type="AudioStream" uid="uid://bhvkcrhy27fun" path="res://PlaceholderAssets/egg_crack.wav" id="11_jcjgp"]
[ext_resource type="AudioStream" uid="uid://b4swkdxdythw6" path="res://PlaceholderAssets/scream.mp3" id="12_11s6l"]
[ext_resource type="PackedScene" uid="uid://cxgcgj5ip0yil" path="res://visibility_node.tscn" id="13_hso5a"]
[ext_resource type="Texture2D" uid="uid://cy64dsequ60f8" path="res://PlaceholderAssets/crowd.png" id="14_lgvep"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7j1ch"]
size = Vector2(280, 92.2624)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ss80x"]
texture = ExtResource("6_2d5xo")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -11.8433, 16, -11.5913, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -11.2133, 11.3393, -11.0873, 11.7173, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -10.9613, -10.8353, -11.0873, -11.0873, -16, 16, -16, 16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.3393, -16, 16, -16, 16, 16, -11.4653, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 11.2133, -16, 11.2133, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -10.9613, 16, -11.0873, 10.8353, -16, 11.0873, -16, -16, 16, -16)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.0873, -11.4653, 16, -11.5913, 16, 16, -11.4653, 16)

[sub_resource type="TileSet" id="TileSet_sphef"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ss80x")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vva1"]
size = Vector2(2350, 316)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ooia"]
size = Vector2(1470.5, 304.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yxb6"]
size = Vector2(637.5, 323.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccjjx"]
size = Vector2(1542.38, 447)

[node name="Level_1" type="Node2D"]
script = ExtResource("1_xnok4")

[node name="CityRunner" type="Sprite2D" parent="."]
position = Vector2(1653, 283)
scale = Vector2(1.81201, 1.81201)
texture = ExtResource("2_1b7ux")

[node name="Goal" type="Area2D" parent="."]
position = Vector2(-503, 146)
scale = Vector2(1, 1.68)

[node name="Sprite2D" type="Sprite2D" parent="Goal"]
position = Vector2(4527, -10.7143)
scale = Vector2(0.254795, 0.17301)
texture = ExtResource("3_vmm24")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2(4527, -10.7143)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_7j1ch")

[node name="Char" parent="." instance=ExtResource("4_yr0gb")]
position = Vector2(560, 343)

[node name="KingEgg" parent="." instance=ExtResource("5_5cukh")]
position = Vector2(573, 126)
char_path = NodePath("../Char")

[node name="Tilemaps" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="Tilemaps"]
position = Vector2(37, -59)
tile_map_data = PackedByteArray("AAABABkAAAABAAEAAAACABkAAAABAAEAAAADABkAAAABAAEAAAAEABkAAAABAAEAAAAFABkAAAABAAEAAAAGABkAAAABAAEAAAAHABkAAAABAAEAAAAIABkAAAABAAEAAAAJABkAAAABAAEAAAAKABkAAAABAAEAAAALABkAAAABAAEAAAAMABkAAAABAAEAAAANABkAAAABAAEAAAAOABkAAAABAAEAAAAPABkAAAABAAEAAAAQABkAAAABAAEAAAARABkAAAABAAEAAAASABkAAAABAAEAAAATABkAAAABAAEAAAAUABkAAAABAAEAAAAVABkAAAABAAEAAAAWABkAAAABAAEAAAAXABkAAAABAAEAAAAYABkAAAABAAEAAAAZABkAAAABAAEAAAAaABkAAAABAAEAAAAbABkAAAABAAEAAAAcABkAAAABAAEAAAAdABkAAAABAAEAAAAeABkAAAABAAEAAAAfABkAAAABAAEAAAAgABkAAAABAAEAAAAhABkAAAABAAEAAAAiABkAAAABAAEAAAAjABkAAAABAAEAAAAkABkAAAABAAEAAAAlABkAAAABAAEAAAAmABkAAAABAAEAAAAnABkAAAABAAEAAAAoABkAAAABAAEAAAApABkAAAABAAEAAAAqABkAAAABAAEAAAArABkAAAABAAEAAAAsABkAAAABAAEAAAAtABkAAAABAAEAAAAuABkAAAABAAEAAAAvABkAAAABAAEAAAAwABkAAAABAAEAAAAxABkAAAABAAEAAAAyABkAAAABAAEAAAAzABkAAAABAAEAAAA0ABkAAAABAAEAAAA1ABkAAAABAAEAAAA2ABkAAAABAAEAAAA3ABkAAAABAAEAAAA4ABkAAAABAAEAAAA5ABkAAAABAAEAAAA6ABkAAAABAAEAAAA7ABkAAAABAAEAAAA8ABkAAAABAAEAAAA9ABkAAAABAAEAAAA+ABkAAAABAAEAAAA/ABkAAAABAAEAAABAABkAAAABAAEAAABBABkAAAABAAEAAABCABkAAAABAAEAAABDABkAAAABAAEAAABEABkAAAABAAEAAABFABkAAAABAAEAAABGABkAAAABAAEAAABHABkAAAABAAEAAABIABkAAAABAAEAAABJABkAAAABAAEAAABKABkAAAABAAEAAABLABkAAAABAAEAAABMABkAAAABAAEAAABNABkAAAABAAEAAABOABkAAAABAAEAAABPABkAAAABAAEAAABQABkAAAABAAEAAABRABkAAAABAAEAAABSABkAAAABAAEAAABTABkAAAABAAEAAABUABkAAAABAAEAAABVABkAAAABAAEAAABWABkAAAABAAEAAABXABkAAAABAAEAAABYABkAAAABAAEAAABZABkAAAABAAEAAABaABkAAAABAAEAAABbABkAAAABAAEAAABcABkAAAABAAEAAABdABkAAAABAAEAAABeABkAAAABAAEAAABfABkAAAABAAEAAABgABkAAAABAAEAAABhABkAAAABAAEAAABiABkAAAABAAEAAABjABkAAAABAAEAAABkABkAAAABAAEAAABlABkAAAABAAEAAABmABkAAAABAAEAAABnABkAAAABAAEAAABoABkAAAABAAEAAABpABkAAAABAAEAAABqABkAAAABAAEAAABrABkAAAABAAEAAABsABkAAAABAAEAAABtABkAAAABAAEAAABuABkAAAABAAEAAABvABkAAAABAAEAAABwABkAAAABAAEAAABxABkAAAABAAEAAAByABkAAAABAAEAAABzABkAAAABAAEAAAB0ABkAAAABAAEAAAB1ABkAAAABAAEAAAB2ABkAAAABAAEAAAB3ABkAAAABAAEAAAB4ABkAAAABAAEAAAB5ABkAAAABAAEAAADu/xkAAAABAAEAAADv/xkAAAABAAEAAADw/xkAAAABAAEAAADx/xkAAAABAAEAAADy/xkAAAABAAEAAADz/xkAAAABAAEAAAD0/xkAAAABAAEAAAD1/xkAAAABAAEAAAD2/xkAAAABAAEAAAD3/xkAAAABAAEAAAD4/xkAAAABAAEAAAD5/xkAAAABAAEAAAD6/xkAAAABAAEAAAD7/xkAAAABAAEAAAD8/xkAAAABAAEAAAD9/xkAAAABAAEAAAD+/xkAAAABAAEAAAD//xkAAAABAAEAAAAAABkAAAABAAEAAAAKAA4AAAABAAEAAAALAA4AAAABAAEAAAAMAA4AAAABAAEAAAANAA4AAAABAAEAAAAOAA4AAAABAAEAAAAPAA4AAAABAAEAAAAQAA4AAAABAAEAAAARAA4AAAABAAEAAAASAA4AAAABAAEAAAATAA4AAAABAAEAAAAUAA4AAAABAAEAAAAVAA4AAAABAAEAAAAWAA4AAAABAAEAAAAXAA4AAAABAAEAAAAYAA4AAAABAAEAAAAZAA4AAAABAAEAAAAaAA4AAAABAAEAAAAaAA8AAAABAAEAAAAZAA8AAAABAAEAAAAYAA8AAAABAAEAAAAXAA8AAAABAAEAAAAWAA8AAAABAAEAAAAVAA8AAAABAAEAAAAUAA8AAAABAAEAAAATAA8AAAABAAEAAAASAA8AAAABAAEAAAARAA8AAAABAAEAAAAQAA8AAAABAAEAAAAPAA8AAAABAAEAAAAOAA8AAAABAAEAAAANAA8AAAABAAEAAAAMAA8AAAABAAEAAAALAA8AAAABAAEAAAAKAA8AAAABAAEAAAAKABAAAAABAAEAAAALABAAAAABAAEAAAAMABAAAAABAAEAAAANABAAAAABAAEAAAAOABAAAAABAAEAAAAPABAAAAABAAEAAAAQABAAAAABAAEAAAARABAAAAABAAEAAAASABAAAAABAAEAAAATABAAAAABAAEAAAAUABAAAAABAAEAAAAVABAAAAABAAEAAAAWABAAAAABAAEAAAAXABAAAAABAAEAAAAYABAAAAABAAEAAAAZABAAAAABAAEAAAAeABAAAAABAAEAAAAeAA8AAAABAAEAAAAeAA4AAAABAAEAAAAeAA0AAAABAAEAAAAeAAsAAAABAAEAAAAeAAoAAAABAAEAAAAeAAkAAAABAAEAAAAeAAgAAAABAAEAAAAeAAcAAAABAAEAAAAeAAwAAAABAAEAAAAhAA4AAAABAAEAAAAhAA8AAAABAAEAAAAhABAAAAABAAEAAAAiAA4AAAABAAEAAAAjAA4AAAABAAEAAAAkAA4AAAABAAEAAAAlAA4AAAABAAEAAAAmAA4AAAABAAEAAAAnAA4AAAABAAEAAAAoAA8AAAABAAEAAAAoABAAAAABAAEAAAAoAA4AAAABAAEAAAAiAA8AAAABAAEAAAAjAA8AAAABAAEAAAAkAA8AAAABAAEAAAAlAA8AAAABAAEAAAAmAA8AAAABAAEAAAAnAA8AAAABAAEAAAAnABAAAAABAAEAAAAmABAAAAABAAEAAAAlABAAAAABAAEAAAAkABAAAAABAAEAAAAjABAAAAABAAEAAAAiABAAAAABAAEAAAArABAAAAABAAEAAAArAA8AAAABAAEAAAArAA4AAAABAAEAAAArAA0AAAABAAEAAAArAAwAAAABAAEAAAArAAsAAAABAAEAAAArAAoAAAABAAEAAAArAAkAAAABAAEAAAArAAgAAAABAAEAAAArAAcAAAABAAEAAAAwABAAAAABAAEAAAAwAA8AAAABAAEAAAAwAA4AAAABAAEAAAAxAA4AAAABAAEAAAAyAA4AAAABAAEAAAAzAA4AAAABAAEAAAAzAA8AAAABAAEAAAAyAA8AAAABAAEAAAAxAA8AAAABAAEAAAAxABAAAAABAAEAAAAxABEAAAABAAEAAAAyABEAAAABAAEAAAAzABEAAAABAAEAAAA5ABEAAAABAAEAAAAzABAAAAABAAEAAAAyABAAAAABAAEAAAAuAA4AAAABAAEAAAAvAA4AAAABAAEAAAAuAA8AAAABAAEAAAAuABAAAAABAAEAAAAuABEAAAABAAEAAAAuABIAAAABAAEAAAAvABEAAAABAAEAAAAvABAAAAABAAEAAAAvAA8AAAABAAEAAAAbAA4AAAABAAEAAAAbAA8AAAABAAEAAAAbABAAAAABAAEAAAAbABEAAAABAAEAAAA2ABAAAAABAAEAAAA2AA8AAAABAAEAAAA2AA4AAAABAAEAAAA2AA0AAAABAAEAAAA2AAwAAAABAAEAAAA2AAsAAAABAAEAAAA2AAoAAAABAAEAAAA2AAkAAAABAAEAAAA2AAgAAAABAAEAAAA2AAcAAAABAAEAAAA5ABAAAAABAAEAAAA5AA8AAAABAAEAAAA5AA4AAAABAAEAAAA6AA4AAAABAAEAAAA7AA4AAAABAAEAAAA7AA8AAAABAAEAAAA7ABAAAAABAAEAAAA7ABEAAAABAAEAAAA6ABEAAAABAAEAAAA6ABAAAAABAAEAAAA6AA8AAAABAAEAAABFAAoAAAABAAEAAABGAAoAAAABAAEAAABHAAoAAAABAAEAAABIAAoAAAABAAEAAABJAAoAAAABAAEAAABRAAgAAAABAAEAAABSAAgAAAABAAEAAABTAAgAAAABAAEAAABUAAgAAAABAAEAAABVAAgAAAABAAEAAABWAAgAAAABAAEAAABXAAgAAAABAAEAAAB5AAgAAAABAAEAAAB6AAgAAAABAAEAAAB7AAgAAAABAAEAAAB8AAgAAAABAAEAAAB9AAgAAAABAAEAAAB+AAgAAAABAAEAAAB/AAgAAAABAAEAAACBAAMAAAABAAEAAACCAAMAAAABAAEAAACBAAAAAAABAAEAAACCAAAAAAABAAEAAACDAAAAAAABAAEAAACBAP3/AAABAAEAAACCAP3/AAABAAEAAACDAP3/AAABAAEAAACBAPr/AAABAAEAAACCAPr/AAABAAEAAACDAPr/AAABAAEAAACBAPf/AAABAAEAAACCAPf/AAABAAEAAACDAPf/AAABAAEAAACEAPf/AAABAAEAAACBAPT/AAABAAEAAACCAPT/AAABAAEAAACDAPT/AAABAAEAAACEAPT/AAABAAEAAACBAPH/AAABAAEAAACCAPH/AAABAAEAAACDAPH/AAABAAEAAACBAO7/AAABAAEAAACCAO7/AAABAAEAAACDAO7/AAABAAEAAACDAO3/AAABAAEAAACDAO//AAABAAEAAACDAPD/AAABAAEAAACDAPL/AAABAAEAAACDAPP/AAABAAEAAACDAPX/AAABAAEAAACDAPb/AAABAAEAAACDAPj/AAABAAEAAACDAPn/AAABAAEAAACDAPv/AAABAAEAAACDAPz/AAABAAEAAAB5ABAAAAABAAEAAAB5AA8AAAABAAEAAAB5AA4AAAABAAEAAAB5AA0AAAABAAEAAAB5AAwAAAABAAEAAAB5AAsAAAABAAEAAAB5AAoAAAABAAEAAAB5AAkAAAABAAEAAAB/AAkAAAABAAEAAAB/AAoAAAABAAEAAAB/AAsAAAABAAEAAAB/AAwAAAABAAEAAAB/AA0AAAABAAEAAAB/AA4AAAABAAEAAAB/AA8AAAABAAEAAAB+ABAAAAABAAEAAAB+ABEAAAABAAEAAAB+ABIAAAABAAEAAAB9ABEAAAABAAEAAAB6ABAAAAABAAEAAAB7ABAAAAABAAEAAAB8ABAAAAABAAEAAAB9ABAAAAABAAEAAAB/ABAAAAABAAEAAACAABAAAAABAAEAAAB6AA8AAAABAAEAAAB6AA4AAAABAAEAAAB6AA0AAAABAAEAAAB6AAwAAAABAAEAAAB6AAsAAAABAAEAAAB6AAoAAAABAAEAAAB6AAkAAAABAAEAAAB7AAkAAAABAAEAAAB8AAkAAAABAAEAAAB9AAkAAAABAAEAAAB+AAkAAAABAAEAAAB+AAoAAAABAAEAAAB+AAsAAAABAAEAAAB+AAwAAAABAAEAAAB+AA0AAAABAAEAAAB+AA4AAAABAAEAAAB+AA8AAAABAAEAAAB9AA8AAAABAAEAAAB8AA8AAAABAAEAAAB7AA8AAAABAAEAAAB7AA4AAAABAAEAAAB7AA0AAAABAAEAAAB7AAwAAAABAAEAAAB7AAsAAAABAAEAAAB7AAoAAAABAAEAAAB8AAoAAAABAAEAAAB9AAoAAAABAAEAAAB9AAsAAAABAAEAAAB9AAwAAAABAAEAAAB9AA0AAAABAAEAAAB9AA4AAAABAAEAAAB8AA4AAAABAAEAAAB8AA0AAAABAAEAAAB8AAwAAAABAAEAAAB8AAsAAAABAAEAAACDAP7/AAABAAEAAACDAP//AAABAAEAAACDAAEAAAABAAEAAACDAAIAAAABAAEAAACDAAMAAAABAAEAAACDAAQAAAABAAEAAACDAAUAAAABAAEAAACDAAYAAAABAAEAAACDAAcAAAABAAEAAACDAAgAAAABAAEAAACDAAkAAAABAAEAAACDAAoAAAABAAEAAACDAAsAAAABAAEAAACDAAwAAAABAAEAAACDAA0AAAABAAEAAACDAA4AAAABAAEAAACDAA8AAAABAAEAAACDABAAAAABAAEAAACBABAAAAABAAEAAACCABAAAAABAAEAAACCAA8AAAABAAEAAACCAA4AAAABAAEAAACCAA0AAAABAAEAAACCAAwAAAABAAEAAACCAAsAAAABAAEAAACCAAoAAAABAAEAAACCAAkAAAABAAEAAACCAAgAAAABAAEAAACCAAcAAAABAAEAAACCAAYAAAABAAEAAACCAAUAAAABAAEAAACCAAQAAAABAAEAAACBAA8AAAABAAEAAACBAA4AAAABAAEAAACBAA0AAAABAAEAAACBAAwAAAABAAEAAACBAAsAAAABAAEAAACBAAoAAAABAAEAAACBAAkAAAABAAEAAACBAAgAAAABAAEAAACBAAcAAAABAAEAAACBAAYAAAABAAEAAACBAAUAAAABAAEAAACBAAQAAAABAAEAAACAAA8AAAABAAEAAACAAA4AAAABAAEAAACAAA0AAAABAAEAAACAAAwAAAABAAEAAACAAAsAAAABAAEAAACAAAoAAAABAAEAAACAAAkAAAABAAEAAACAAAgAAAABAAEAAACEAO3/AAABAAEAAACEAO7/AAABAAEAAACEAO//AAABAAEAAACEAPH/AAABAAEAAACEAPL/AAABAAEAAACEAPP/AAABAAEAAACEAPX/AAABAAEAAACEAPb/AAABAAEAAACEAPj/AAABAAEAAACEAPn/AAABAAEAAACEAPr/AAABAAEAAACEAPv/AAABAAEAAACEAPz/AAABAAEAAACEAP3/AAABAAEAAACEAP7/AAABAAEAAACEAP//AAABAAEAAACEAAAAAAABAAEAAACEAAEAAAABAAEAAACEAAIAAAABAAEAAACEAAMAAAABAAEAAACEAAQAAAABAAEAAACEAAUAAAABAAEAAACEAAYAAAABAAEAAACEAAcAAAABAAEAAACEAAgAAAABAAEAAACEAAkAAAABAAEAAACEAAoAAAABAAEAAACEAAsAAAABAAEAAACEAAwAAAABAAEAAACEAA0AAAABAAEAAACEAA4AAAABAAEAAACEAA8AAAABAAEAAACEABAAAAABAAEAAACEAPD/AAABAAEAAACEAOz/AAABAAEAAACEAOv/AAABAAEAAACDAOz/AAABAAEAAACDAOv/AAABAAEAAACBAOv/AAABAAEAAACCAOv/AAABAAEAAAAcAA4AAAABAAEAAAAdAA4AAAABAAEAAAAdAA8AAAABAAEAAAAdABAAAAABAAEAAAAcAA8AAAABAAEAAAAcABAAAAABAAEAAAAaABAAAAABAAEAAAAfAA4AAAABAAEAAAAgAA4AAAABAAEAAAAgAA8AAAABAAEAAAAgABAAAAABAAEAAAAfABAAAAABAAEAAAAfAA8AAAABAAEAAAApAA4AAAABAAEAAAAqAA4AAAABAAEAAAAqAA8AAAABAAEAAAAqABAAAAABAAEAAAAqABEAAAABAAEAAAApABEAAAABAAEAAAApABAAAAABAAEAAAApAA8AAAABAAEAAAAsAA4AAAABAAEAAAAtAA4AAAABAAEAAAAtAA8AAAABAAEAAAAtABAAAAABAAEAAAAtABEAAAABAAEAAAAsABEAAAABAAEAAAAsABAAAAABAAEAAAAsAA8AAAABAAEAAAA0AA4AAAABAAEAAAA1AA4AAAABAAEAAAA1AA8AAAABAAEAAAA1ABAAAAABAAEAAAA1ABEAAAABAAEAAAA1ABIAAAABAAEAAAA0ABEAAAABAAEAAAA0ABAAAAABAAEAAAA0AA8AAAABAAEAAAA3AA4AAAABAAEAAAA4AA4AAAABAAEAAAA4AA8AAAABAAEAAAA4ABAAAAABAAEAAAA4ABEAAAABAAEAAAA4ABIAAAABAAEAAAA3ABEAAAABAAEAAAA3ABAAAAABAAEAAAA3AA8AAAABAAEAAAA8AA4AAAABAAEAAAA8AA8AAAABAAEAAAA8ABAAAAABAAEAAAA8ABEAAAABAAEAAAA8ABIAAAABAAEAAABYAAgAAAABAAEAAABZAAgAAAABAAEAAABaAAgAAAABAAEAAABbAAgAAAABAAEAAACDAOr/AAABAAEAAACEAOr/AAABAAEAAACDAOn/AAABAAEAAACEAOn/AAABAAEAAACDAOj/AAABAAEAAACEAOj/AAABAAEAAACCAOj/AAABAAEAAACBAOj/AAABAAEAAACDAOf/AAABAAEAAACEAOf/AAABAAEAAACDAOb/AAABAAEAAACEAOb/AAABAAEAAACDAOX/AAABAAEAAACEAOX/AAABAAEAAACBAOX/AAABAAEAAACCAOX/AAABAAEAAACDAOT/AAABAAEAAACEAOT/AAABAAEAAACDAOP/AAABAAEAAACEAOP/AAABAAEAAACDAOL/AAABAAEAAACEAOL/AAABAAEAAACBAOL/AAABAAEAAACCAOL/AAABAAEAAAA=")
tile_set = SubResource("TileSet_sphef")

[node name="TutorialText" type="Label" parent="."]
offset_left = 356.0
offset_top = 201.0
offset_right = 500.0
offset_bottom = 250.0

[node name="MultiCam" type="Camera2D" parent="."]
script = ExtResource("7_qfcct")

[node name="DangerZone" parent="." instance=ExtResource("9_mcrxt")]
position = Vector2(131, 489)

[node name="Shock" type="AudioStreamPlayer" parent="DangerZone"]
stream = ExtResource("10_xb1oo")
volume_db = -10.925

[node name="EggCrack" type="AudioStreamPlayer" parent="DangerZone"]
stream = ExtResource("11_jcjgp")
volume_db = -6.07

[node name="Scream" type="AudioStreamPlayer" parent="DangerZone"]
stream = ExtResource("12_11s6l")
volume_db = -14.568

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
position = Vector2(524, 154)
shape = SubResource("RectangleShape2D_2vva1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DangerZone"]
position = Vector2(2431.75, 170.312)
shape = SubResource("RectangleShape2D_6ooia")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DangerZone"]
position = Vector2(3488.25, 132.25)
shape = SubResource("RectangleShape2D_4yxb6")

[node name="visibiltyNode" parent="." instance=ExtResource("13_hso5a")]
position = Vector2(4016, 160)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visibiltyNode"]
position = Vector2(-628.812, -152)
shape = SubResource("RectangleShape2D_ccjjx")

[node name="crowd" type="Node2D" parent="."]
position = Vector2(614, 819)
scale = Vector2(0.416178, 0.288086)

[node name="Crowd" type="Sprite2D" parent="crowd"]
position = Vector2(144.169, -805.315)
texture = ExtResource("14_lgvep")

[node name="Crowd5" type="Sprite2D" parent="crowd"]
position = Vector2(-2777.66, -798.373)
texture = ExtResource("14_lgvep")

[node name="Crowd6" type="Sprite2D" parent="crowd"]
scale = Vector2(1.17966, 1.17966)
texture = ExtResource("14_lgvep")

[node name="Crowd6" type="Sprite2D" parent="crowd/Crowd6"]
position = Vector2(-2011.16, 0)
texture = ExtResource("14_lgvep")

[node name="Crowd2" type="Sprite2D" parent="crowd"]
position = Vector2(3207.76, -735.891)
texture = ExtResource("14_lgvep")

[node name="Crowd7" type="Sprite2D" parent="crowd"]
position = Vector2(3046.77, 34.7119)
scale = Vector2(1.40339, 1.40339)
texture = ExtResource("14_lgvep")

[node name="Crowd3" type="Sprite2D" parent="crowd"]
position = Vector2(6059.91, -808.786)
texture = ExtResource("14_lgvep")

[node name="Crowd4" type="Sprite2D" parent="crowd"]
position = Vector2(9056.22, -805.315)
texture = ExtResource("14_lgvep")

[node name="Crowd8" type="Sprite2D" parent="crowd"]
position = Vector2(6059.91, 55.5388)
scale = Vector2(1.33559, 1.33559)
texture = ExtResource("14_lgvep")

[node name="Crowd9" type="Sprite2D" parent="crowd"]
position = Vector2(9092.26, 97.1931)
scale = Vector2(1.2339, 1.2339)
texture = ExtResource("14_lgvep")

[node name="Crowd10" type="Sprite2D" parent="crowd"]
position = Vector2(370.034, 1069.13)
scale = Vector2(1.72373, 1.72373)
texture = ExtResource("14_lgvep")

[node name="Crowd10" type="Sprite2D" parent="crowd/Crowd10"]
position = Vector2(3169.88, 58.3989)
scale = Vector2(1.09363, 1.04799)
texture = ExtResource("14_lgvep")

[node name="Enemy" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, 0)

[node name="Enemy6" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -568)

[node name="Enemy2" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -96)

[node name="Enemy3" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -192)

[node name="Enemy4" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -384)

[node name="Enemy9" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -288)

[node name="Enemy5" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -472)

[node name="Enemy7" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -672)

[node name="Enemy8" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -768)

[node name="Enemy10" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -864)

[node name="Enemy11" parent="." instance=ExtResource("8_tkiwc")]
position = Vector2(4176, -960)

[connection signal="break_egg" from="." to="Char" method="_on_break_egg"]
[connection signal="body_entered" from="Goal" to="KingEgg" method="_on_goal_body_entered"]
[connection signal="death" from="KingEgg" to="." method="_on_death"]
[connection signal="death" from="DangerZone" to="." method="_on_death"]
